fix panel span overflow header;

--- a/alura_books/assets/css/partials/header/_panel.scss
+++ b/alura_books/assets/css/partials/header/_panel.scss
@@ -13,7 +13,7 @@
     gap: 0.25rem;
 
     height: 51px;
-    width: 51px;
+    min-width: 51px;
 
     &::before {
       margin: auto;
