--- a/alura_books/assets/css/style.css
+++ b/alura_books/assets/css/style.css
@@ -153,7 +153,7 @@ body {
   align-items: center;
   gap: 0.25rem;
   height: 51px;
-  width: 51px;
+  min-width: 51px;
 }
 .panel__link::before {
   margin: auto;
